--- a/SPRINT/index.html
+++ b/SPRINT/index.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MineSweeper</title>
+    <link rel="stylesheet" href="css/app.css">
 </head>
 
 <body>
-    <link rel="stylesheet" href="css/app.css">
-    </head>
     <h1>MineSweeper</h1>
-
     <body onload="onInit()">
         <h3>
-            <div class="shown-count">show:<span>0</span></div>
+            <div hidden class="shown-count">show:<span>0</span></div>
             <div class="marked-count">&#127987 <span>0</span></div>
             <div class="timer"> 0.00<span>s</span></div>
         </h3>
-        <table class="board-container">
+        <table class="board">
             <tbody class="board-cells"></tbody>
-            <button hidden class="cell-click" onclick="onCellClicked()"></button>
+            <!-- <button hidden class="cell-click" onclick="onCellClicked()"></button> -->
         </table>
 
         <h4 class="Safe click">Safe Click:<span>0</span></h4>
@@ -33,7 +30,7 @@
             <button class="play-again" onclick="init()">Play Again</button>
             <button class="undo" onclick="init()">UNDO</button>
         </h5>
-        <h6>2023</h6>
+        <h6> 2023</h6>
         <script src="js/utils.js"></script>
         <script src="js/game.js"></script>
     </body>
